--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img class="img-responsive" src="asset/img/tamu-logo-white.png">
                 </a>
                 <a href="https://github.com/xkommando" class="logo">
-                    <img class="img-responsive" width="70%" src="asset/img/GitHub-Mark-Light-64px.png">
+                    <img class="img-responsive" width="68%" src="asset/img/GitHub-Mark-Light-64px.png">
                 </a>
                 <a href="https://www.linkedin.com/in/bowencai" class="logo">
                     <img class="img-responsive" src="asset/img/Logo-2CRev-28px-TM.png">
@@ -137,16 +137,14 @@
                 </div>
             </noscript>
             <div class="col-lg-12">
-                <div class="col-xs-8 col-xs-push-2 col-md-4 col-md-push-0 ">
+                <div class="col-xs-6 col-xs-push-2 col-md-3 col-md-push-0 ">
                     <img class="img-responsive avatar" src="asset/img/avatar.jpg" alt="could not load image">
                 </div>
                 <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
                     <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
-                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a master student in Computer Science (MSCS) at
-                        the <a href="https://parasol.tamu.edu/groups/huangroup">ASER Group</a>,
-                        <a href="https://parasol.tamu.edu/"> Parasol Lab</a>,
-                        <a href="https://www.tamu.edu/">Texas A&amp;M University</a>. Currently I am seeking a full time
-                        software developer job starting from Jan 2018. Find more information about me:
+                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a master student in Computer Science from
+                        <a href="https://www.tamu.edu/">Texas A&amp;M University</a> graduating in May 2018. I am seeking a full time
+                        software developer job. Find more information about me:
                     <div>
                         <a href="asset/doc/resume_cs_bowen_cai.pdf" target="_blank" >
                             <img style="margin-left: 20px" src="asset/img/resume_logo_26.png">
@@ -160,22 +158,6 @@
                         </a>
                     </div>
                     </p>
-                    <p class="top-buffer-40 i18n-txt" data-i18n-key="intro-p2">
-                        My master advisor is <a href="https://parasol.tamu.edu/people/jeff/">Dr. Jeff Huang</a>.
-                        I obtained my bachelor degree in Software Engineering
-                        at
-                        <a href="http://en.nwpu.edu.cn/">Northwestern Polytechical University</a> in 2015. My research
-                        interests includes Program analysis and Software engineering.</p>
-                    <address class="top-buffer-40 i18n-txt" data-i18n-key="intro-addr">
-                        Tel: &nbsp;&nbsp;&nbsp;&nbsp;<i> <a href="tel:+19799856333" target="_blank"> (979) 985-6333 </a></i><br>
-                        Email:&nbsp;<i> bowen DOT cai AT tamu DOT edu </i><br>
-                        Office:&nbsp; 419C
-                        <a href="http://aggiemap.tamu.edu/?bldg=0353" target="_blank" rel="nofollow">HRBB</a>
-                        (<a href="https://goo.gl/maps/fRVNo5DgMGo">Google Map</a>)
-                        <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        College Station, TX 77843-3112, USA
-                    </address>
                 </div>
             </div>
         </div>
