--- a/index.html
+++ b/index.html
@@ -76,163 +76,11 @@
     <!--<link rel="stylesheet" href="asset/css/webface.css">-->
     <link rel="stylesheet" href="asset/css/webface.min.css"> <!-- including ladda css -->
 
-    <title class="i18n-txt" data-i18n-key="page-title">Bowen Cai - Computer Science Student at Texas A&amp;M </title>
+    <title class="i18n-txt" data-i18n-key="page-title">Bowen Cai - Home Page </title>
 
 </head>
 
-<body id="body-top">
-
-<nav id="wf_nav" class="navbar navbar-default navbar-fixed-top bg-navfoot">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#wf_navbar_collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div>
-                <a href="https://www.tamu.edu" class="logo">
-                    <img class="img-responsive" src="asset/img/tamu-logo-white.png">
-                </a>
-                <a href="https://github.com/xkommando" class="logo">
-                    <img class="img-responsive" width="68%" src="asset/img/GitHub-Mark-Light-64px.png">
-                </a>
-                <a href="https://www.linkedin.com/in/bowencai" class="logo">
-                    <img class="img-responsive" src="asset/img/Logo-2CRev-28px-TM.png">
-                </a>
-            </div>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="wf_navbar_collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#body-top"></a>
-                </li>
-                <li class="page-scroll" data-menuanchor="about">
-                    <a href="#about" class="i18n-txt" data-i18n-key="nav-about">About</a>
-                </li>
-                <li class="page-scroll" data-menuanchor="contact">
-                    <a href="#contact" class="i18n-txt" data-i18n-key="nav-contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
-
-
-<header id="about">
-    <div class="container">
-        <div class="row">
-            <noscript>
-                <div class="alert alert-warning text-center top-buffer i18n-txt">
-                    <h4>本网站使用Javascript，请打开您的浏览器的Javascript支持。</h4>
-                    <h4>This site relies heavily on Javascript.</h4>
-                    <h4> You need to enable Javascript in your browser.</h4>
-                </div>
-            </noscript>
-            <div class="col-lg-12">
-                <div class="col-xs-6 col-xs-push-2 col-md-3 col-md-push-0 ">
-                    <img class="img-responsive avatar" src="asset/img/avatar.jpg" alt="could not load image">
-                </div>
-                <div class="col-xs-12 col-md-push-1 col-md-7 top-buffer-20">
-                    <h3 class="i18n-txt" data-i18n-key="author-name">Bowen Cai (蔡博文)</h3>
-                    <p class="i18n-txt" data-i18n-key="intro-p1"> I am a master student in Computer Science from
-                        <a href="https://www.tamu.edu/">Texas A&amp;M University</a> graduating in May 2018. I am seeking a full time
-                        software developer job. Find more information about me:
-                    <div>
-                        <a href="asset/doc/resume_cs_bowen_cai.pdf" target="_blank" >
-                            <img style="margin-left: 20px" src="asset/img/resume_logo_26.png">
-                        </a>
-                        <a href="https://www.linkedin.com/in/bowencai" target="_blank">
-                            <img  style="margin-left: 20px" src="asset/img/Logo-2C-34px-TM.png">
-                        </a>
-
-                        <a href="https://github.com/xkommando" target="_blank">
-                            <img style="margin-left: 30px" src="asset/img/GitHub-Mark-32px.png">
-                        </a>
-                    </div>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
-<section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 id="contact_title" class="i18n-txt" data-i18n-key="contact-head">Leave A Message</h2>
-                <hr>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-
-                <form name="sentMessage" id="contact_form">
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label class="i18n-txt" data-i18n-key="contact-name">Name</label>
-                            <input type="text" class="form-control i18n-txt-p" placeholder="Name" id="cta_name" required
-                                   data-validation-required-message="Please enter your name."
-                                   data-i18n-key="contact-name">
-
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label class="i18n-txt" data-i18n-key="contact-email">Email Address</label>
-                            <input type="email" class="form-control i18n-txt-p" placeholder="Email Address"
-                                   id="cta_email"
-                                   required data-validation-required-message="Please enter your email address."
-                                   data-i18n-key="contact-email">
-
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label class="i18n-txt" data-i18n-key="contact-msg">Message</label>
-                            <textarea rows="4" class="form-control i18n-txt-p" placeholder="Message" id="cta_message"
-                                      required
-                                      data-validation-required-message="Please enter your message."
-                                      data-i18n-key="contact-msg"></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <br>
-
-                    <div id="success"></div>
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <button type="submit" id="btn_submit"
-                                    class="ladda-button center-block" data-style="expand-right">
-                                <span class="ladda-label i18n-txt" data-i18n-key="contact-submit">Send</span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
-
-<footer class="text-center bg-navfoot">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 i18n-txt" data-i18n-key="footer-copyright">
-                Copyright &copy; Bowen Cai 2013 - 2017
-            </div>
-        </div>
-    </div>
-</footer>
+<body>
 
 <!-- Scroll to Top Button, Only visible on small and extra-small screen-->
 <div class="scroll-top page-scroll visible-xs visible-sm">
@@ -275,7 +123,7 @@
 <!--<script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda.min.js"></script>-->
 
 <!--<script type="application/javascript" src="asset/js/webface.js"></script>-->
-<script type="application/javascript" src="asset/js/webface.min.js"></script>
+<!-- <script type="application/javascript" src="asset/js/webface.min.js"></script> -->
 <!-- including jquery-easing, headroom, spin and ladda -->
 
 </body>
